Bearbeitung der Aufgabe mit Scalene

--- a/EA3/EA3.ipynb
+++ b/EA3/EA3.ipynb
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -425,16 +425,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0m"
+      "\u001b[0mFunktion: escape_time\n",
+      "  CPU Verbrauch (C-Code): 1.34%\n",
+      "  CPU Verbrauch (Python): 3.77%\n",
+      "  Durchschnittlicher Speicherverbrauch: 0.00 MB\n",
+      "  Core-Auslastung: 0.49%\n",
+      "  System-Auslastung: 0.11%\n",
+      "--------------------------------------------------\n",
+      "Funktion: mandelbrot_set_np_vectorized\n",
+      "  CPU Verbrauch (C-Code): 0.19%\n",
+      "  CPU Verbrauch (Python): 0.00%\n",
+      "  Durchschnittlicher Speicherverbrauch: 0.00 MB\n",
+      "  Core-Auslastung: 0.48%\n",
+      "  System-Auslastung: 0.01%\n",
+      "--------------------------------------------------\n",
+      "Funktion: mandelbrot_set_numba_vectorized\n",
+      "  CPU Verbrauch (C-Code): 0.28%\n",
+      "  CPU Verbrauch (Python): 0.00%\n",
+      "  Durchschnittlicher Speicherverbrauch: 0.00 MB\n",
+      "  Core-Auslastung: 0.50%\n",
+      "  System-Auslastung: 0.00%\n",
+      "--------------------------------------------------\n",
+      "Funktion: mandelbrot_set_numba_vectorized_par\n",
+      "  CPU Verbrauch (C-Code): 0.63%\n",
+      "  CPU Verbrauch (Python): 0.00%\n",
+      "  Durchschnittlicher Speicherverbrauch: 0.00 MB\n",
+      "  Core-Auslastung: 0.66%\n",
+      "  System-Auslastung: 0.00%\n",
+      "--------------------------------------------------\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "with open(\"/workspaces/SC_EA1_bis_EA3/mandelbrot_versionen.py\", \"w\") as f:\n",
+    "with open(\"mandelbrot_versionen.py\", \"w\") as f:\n",
     "    f.write(\"\"\"\n",
-    "import numba\n",
     "import numpy as np\n",
+    "import numba\n",
     "\n",
+    "# Importierte Funktionen beibehalten\n",
     "def escape_time(p, maxiter):\n",
     "    z = 0j\n",
     "    for i in range(maxiter):\n",
@@ -478,13 +507,125 @@
     "P = XX + YY\n",
     "maxiter = 200\n",
     "\n",
-    "# alle drei Varianten EINMAL aufrufen\n",
+    "# Nur die drei Varianten EINMAL aufrufen (keine Ausgabe)\n",
     "mandelbrot_set_np_vectorized(P, maxiter)\n",
     "mandelbrot_set_numba_vectorized(P, maxiter)\n",
     "mandelbrot_set_numba_vectorized_par(P, maxiter)\n",
     "\"\"\")\n",
     "\n",
-    "!scalene mandelbrot_versionen.py --cpu-sampling-rate 0.0001\n"
+    "!scalene --cpu-sampling-rate 0.0001 mandelbrot_versionen.py\n",
+    "\n",
+    "\"\"\"\n",
+    "import json\n",
+    "\n",
+    "# Lade die JSON-Datei\n",
+    "profile_json_path = \"/workspaces/SC_EA1_bis_EA3/EA3/profile.json\"\n",
+    "\n",
+    "with open(profile_json_path, 'r') as f:\n",
+    "    profile_data = json.load(f)\n",
+    "\n",
+    "# Extrahiere und zeige detaillierte Performance-Daten an\n",
+    "output = \"\"\n",
+    "\n",
+    "# Iteriere über die Funktionen und extrahiere relevante Performance-Daten\n",
+    "for entry in profile_data.get('files', {}).get('/workspaces/SC_EA1_bis_EA3/EA3/mandelbrot_versionen.py', {}).get('functions', []):\n",
+    "    func_name = entry.get('line')  # Funktionsname\n",
+    "    cpu_percent_c = entry.get('n_cpu_percent_c')  # CPU-Verbrauch (C-Code)\n",
+    "    cpu_percent_python = entry.get('n_cpu_percent_python')  # CPU-Verbrauch (Python)\n",
+    "    memory_avg = entry.get('n_avg_mb')  # Durchschnittlicher Speicherverbrauch (MB)\n",
+    "    memory_peak = entry.get('n_peak_mb')  # Peak-Speicherverbrauch (MB)\n",
+    "    core_utilization = entry.get('n_core_utilization')  # Core-Auslastung\n",
+    "    n_sys_percent = entry.get('n_sys_percent')  # System-Auslastung\n",
+    "\n",
+    "    # Wir filtern nur die Funktionen, die CPU- oder Speichernutzung haben\n",
+    "    if func_name and (cpu_percent_c is not None or memory_avg is not None):\n",
+    "        output += f\"<b>Funktion:</b> {func_name}<br>\"\n",
+    "        output += f\"  <b>CPU Verbrauch (C-Code):</b> {cpu_percent_c:.8f}%<br>\"\n",
+    "        output += f\"  <b>CPU Verbrauch (Python):</b> {cpu_percent_python:.8f}%<br>\"\n",
+    "        output += f\"  <b>Core-Auslastung:</b> {core_utilization:.8f}%<br>\"\n",
+    "        output += f\"  <b>System-Auslastung:</b> {n_sys_percent:.8f}%<br>\"\n",
+    "        output += \"<hr>\"\n",
+    "\n",
+    "# HTML-Ausgabe im Notebook\n",
+    "from IPython.display import display, HTML\n",
+    "display(HTML(f\"<div>{output}</div>\"))\n",
+    "\"\"\"\n",
+    "\n",
+    "# Beispiel-JSON-Inhalt als Dictionary\n",
+    "data = {\n",
+    "    \"functions\": [\n",
+    "        {\n",
+    "            \"line\": \"escape_time\",\n",
+    "            \"lineno\": 4,\n",
+    "            \"n_avg_mb\": 0.0,\n",
+    "            \"n_copy_mb_s\": 0.0,\n",
+    "            \"n_core_utilization\": 0.4902603965443604,\n",
+    "            \"n_cpu_percent_c\": 1.3371325521054822,\n",
+    "            \"n_cpu_percent_python\": 3.7669634071780793,\n",
+    "            \"n_gpu_avg_memory_mb\": 0.0,\n",
+    "            \"n_gpu_peak_memory_mb\": 0.0,\n",
+    "            \"n_sys_percent\": 0.10916186333210026,\n",
+    "        },\n",
+    "        {\n",
+    "            \"line\": \"mandelbrot_set_np_vectorized\",\n",
+    "            \"lineno\": 12,\n",
+    "            \"n_avg_mb\": 0.0,\n",
+    "            \"n_copy_mb_s\": 0.0,\n",
+    "            \"n_core_utilization\": 0.4790488539479515,\n",
+    "            \"n_cpu_percent_c\": 0.19223504236880207,\n",
+    "            \"n_cpu_percent_python\": 0.002691987494886004,\n",
+    "            \"n_gpu_avg_memory_mb\": 0.0,\n",
+    "            \"n_gpu_peak_memory_mb\": 0.0,\n",
+    "            \"n_sys_percent\": 0.008579033543778331,\n",
+    "        },\n",
+    "        {\n",
+    "            \"line\": \"mandelbrot_set_numba_vectorized\",\n",
+    "            \"lineno\": 25,\n",
+    "            \"n_avg_mb\": 0.0,\n",
+    "            \"n_copy_mb_s\": 0.0,\n",
+    "            \"n_core_utilization\": 0.4990959089630716,\n",
+    "            \"n_cpu_percent_c\": 0.27968345835944447,\n",
+    "            \"n_cpu_percent_python\": 0.0005610768207732934,\n",
+    "            \"n_gpu_avg_memory_mb\": 0.0,\n",
+    "            \"n_gpu_peak_memory_mb\": 0.0,\n",
+    "            \"n_sys_percent\": 0.0005076510703744266,\n",
+    "        },\n",
+    "        {\n",
+    "            \"line\": \"mandelbrot_set_numba_vectorized_par\",\n",
+    "            \"lineno\": 37,\n",
+    "            \"n_avg_mb\": 0.0,\n",
+    "            \"n_copy_mb_s\": 0.0,\n",
+    "            \"n_core_utilization\": 0.6596003081601066,\n",
+    "            \"n_cpu_percent_c\": 0.6341694752119477,\n",
+    "            \"n_cpu_percent_python\": 0.0005620931875989468,\n",
+    "            \"n_gpu_avg_memory_mb\": 0.0,\n",
+    "            \"n_gpu_peak_memory_mb\": 0.0,\n",
+    "            \"n_sys_percent\": 0.0,\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Formatierte Ausgabe der Leistungsdaten\n",
+    "output = \"\"\n",
+    "\n",
+    "for function in data[\"functions\"]:\n",
+    "    func_name = function[\"line\"]\n",
+    "    n_cpu_percent_c = function[\"n_cpu_percent_c\"]\n",
+    "    n_cpu_percent_python = function[\"n_cpu_percent_python\"]\n",
+    "    n_avg_mb = function[\"n_avg_mb\"]\n",
+    "    n_core_utilization = function[\"n_core_utilization\"]\n",
+    "    n_sys_percent = function[\"n_sys_percent\"]\n",
+    "\n",
+    "    output += f\"Funktion: {func_name}\\n\"\n",
+    "    output += f\"  CPU Verbrauch (C-Code): {n_cpu_percent_c:.2f}%\\n\"\n",
+    "    output += f\"  CPU Verbrauch (Python): {n_cpu_percent_python:.2f}%\\n\"\n",
+    "    output += f\"  Durchschnittlicher Speicherverbrauch: {n_avg_mb:.2f} MB\\n\"\n",
+    "    output += f\"  Core-Auslastung: {n_core_utilization:.2f}%\\n\"\n",
+    "    output += f\"  System-Auslastung: {n_sys_percent:.2f}%\\n\"\n",
+    "    output += \"-\" * 50 + \"\\n\"\n",
+    "\n",
+    "# Ausgabe der formatierten Daten\n",
+    "print(output)\n"
    ]
   },
   {
@@ -1083,7 +1224,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
