Bearbeitung der Aufgabe der Performance-Untersuchung mit Scalene

--- a/EA3/EA3.ipynb
+++ b/EA3/EA3.ipynb
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -425,36 +425,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0mFunktion: escape_time\n",
-      "  CPU Verbrauch (C-Code): 1.34%\n",
-      "  CPU Verbrauch (Python): 3.77%\n",
-      "  Durchschnittlicher Speicherverbrauch: 0.00 MB\n",
-      "  Core-Auslastung: 0.49%\n",
-      "  System-Auslastung: 0.11%\n",
-      "--------------------------------------------------\n",
-      "Funktion: mandelbrot_set_np_vectorized\n",
-      "  CPU Verbrauch (C-Code): 0.19%\n",
-      "  CPU Verbrauch (Python): 0.00%\n",
-      "  Durchschnittlicher Speicherverbrauch: 0.00 MB\n",
-      "  Core-Auslastung: 0.48%\n",
-      "  System-Auslastung: 0.01%\n",
-      "--------------------------------------------------\n",
-      "Funktion: mandelbrot_set_numba_vectorized\n",
-      "  CPU Verbrauch (C-Code): 0.28%\n",
-      "  CPU Verbrauch (Python): 0.00%\n",
-      "  Durchschnittlicher Speicherverbrauch: 0.00 MB\n",
-      "  Core-Auslastung: 0.50%\n",
-      "  System-Auslastung: 0.00%\n",
-      "--------------------------------------------------\n",
-      "Funktion: mandelbrot_set_numba_vectorized_par\n",
-      "  CPU Verbrauch (C-Code): 0.63%\n",
-      "  CPU Verbrauch (Python): 0.00%\n",
-      "  Durchschnittlicher Speicherverbrauch: 0.00 MB\n",
-      "  Core-Auslastung: 0.66%\n",
-      "  System-Auslastung: 0.00%\n",
-      "--------------------------------------------------\n",
+      "\u001b[0mFunktion: escape_time (Zeile 6)\n",
+      "  lineno: 6\n",
+      "  n_copy_mb_s: 6.97673502304257\n",
+      "  n_core_utilization: 0.48431505859375046\n",
+      "  n_cpu_percent_c: 1.451834793967412\n",
+      "  n_cpu_percent_python: 3.9980974419664554\n",
+      "  n_sys_percent: 0.1846107205141759\n",
+      "\n",
+      "\n",
+      "Funktion: mandelbrot_set_np_vectorized (Zeile 14)\n",
+      "  lineno: 14\n",
+      "  n_core_utilization: 0.45504170475477107\n",
+      "  n_cpu_percent_c: 0.1287037888682315\n",
+      "  n_cpu_percent_python: 0.0015846065590466739\n",
+      "  n_sys_percent: 0.012872543521705174\n",
+      "\n",
+      "\n",
+      "Funktion: mandelbrot_set_numba_vectorized (Zeile 27)\n",
+      "  lineno: 27\n",
+      "  n_core_utilization: 0.4999863301512297\n",
+      "  n_cpu_percent_c: 0.2191306520803602\n",
+      "  n_cpu_percent_python: 0.000580372897628718\n",
+      "  n_sys_percent: 6.006997198731277e-06\n",
+      "\n",
+      "\n",
+      "Funktion: mandelbrot_set_numba_vectorized_par (Zeile 39)\n",
+      "  lineno: 39\n",
+      "  n_core_utilization: 0.7478834773439088\n",
+      "  n_cpu_percent_c: 0.5518025117806566\n",
+      "  n_cpu_percent_python: 0.0005803887652820168\n",
+      "\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nFunktion: escape_time\\n  CPU Verbrauch (C-Code): 1.34%\\n  CPU Verbrauch (Python): 3.77%\\n  Durchschnittlicher Speicherverbrauch: 0.00 MB\\n  Core-Auslastung: 0.49%\\n  System-Auslastung: 0.11%\\n--------------------------------------------------\\nFunktion: mandelbrot_set_np_vectorized\\n  CPU Verbrauch (C-Code): 0.19%\\n  CPU Verbrauch (Python): 0.00%\\n  Durchschnittlicher Speicherverbrauch: 0.00 MB\\n  Core-Auslastung: 0.48%\\n  System-Auslastung: 0.01%\\n--------------------------------------------------\\nFunktion: mandelbrot_set_numba_vectorized\\n  CPU Verbrauch (C-Code): 0.28%\\n  CPU Verbrauch (Python): 0.00%\\n  Durchschnittlicher Speicherverbrauch: 0.00 MB\\n  Core-Auslastung: 0.50%\\n  System-Auslastung: 0.00%\\n--------------------------------------------------\\nFunktion: mandelbrot_set_numba_vectorized_par\\n  CPU Verbrauch (C-Code): 0.63%\\n  CPU Verbrauch (Python): 0.00%\\n  Durchschnittlicher Speicherverbrauch: 0.00 MB\\n  Core-Auslastung: 0.66%\\n  System-Auslastung: 0.00%\\n--------------------------------------------------\\n'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -515,7 +528,64 @@
     "\n",
     "!scalene --cpu-sampling-rate 0.0001 mandelbrot_versionen.py\n",
     "\n",
+    "import json\n",
+    "\n",
+    "# Lade die JSON-Datei\n",
+    "with open('/workspaces/SC_EA1_bis_EA3/EA3/profile.json', 'r') as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "# Extrahiere nur den Bereich mit den Funktionen\n",
+    "functions_data = data['files']['/workspaces/SC_EA1_bis_EA3/EA3/mandelbrot_versionen.py']['functions']\n",
+    "\n",
+    "# Ausgabe der Funktionen, nur mit Werten > 0\n",
+    "for function in functions_data:\n",
+    "    print(f\"Funktion: {function['line']} (Zeile {function['lineno']})\")\n",
+    "    for key, value in function.items():\n",
+    "        if isinstance(value, (int, float)) and value > 0:  # Nur Werte > 0 anzeigen\n",
+    "            print(f\"  {key}: {value}\")\n",
+    "    print(\"\\n\")\n",
+    "\n",
     "\"\"\"\n",
+    "\n",
+    "Zeit für np.vectorize: 10.9214 Sekunden\n",
+    "Zeit für numba.vectorize: 0.9113 Sekunden\n",
+    "Zeit für numba.vectorize (parallel): 0.9654 Sekunden\n",
+    "\n",
+    "Funktion: escape_time (Zeile 6)\n",
+    "  lineno: 6\n",
+    "  n_copy_mb_s: 6.97673502304257\n",
+    "  n_core_utilization: 0.48431505859375046\n",
+    "  n_cpu_percent_c: 1.451834793967412\n",
+    "  n_cpu_percent_python: 3.9980974419664554\n",
+    "  n_sys_percent: 0.1846107205141759\n",
+    "\n",
+    "\n",
+    "Funktion: mandelbrot_set_np_vectorized (Zeile 14)\n",
+    "  lineno: 14\n",
+    "  n_core_utilization: 0.45504170475477107\n",
+    "  n_cpu_percent_c: 0.1287037888682315\n",
+    "  n_cpu_percent_python: 0.0015846065590466739\n",
+    "  n_sys_percent: 0.012872543521705174\n",
+    "\n",
+    "\n",
+    "Funktion: mandelbrot_set_numba_vectorized (Zeile 27)\n",
+    "  lineno: 27\n",
+    "  n_core_utilization: 0.4999863301512297\n",
+    "  n_cpu_percent_c: 0.2191306520803602\n",
+    "  n_cpu_percent_python: 0.000580372897628718\n",
+    "  n_sys_percent: 6.006997198731277e-06\n",
+    "\n",
+    "\n",
+    "Funktion: mandelbrot_set_numba_vectorized_par (Zeile 39)\n",
+    "  lineno: 39\n",
+    "  n_core_utilization: 0.7478834773439088\n",
+    "  n_cpu_percent_c: 0.5518025117806566\n",
+    "  n_cpu_percent_python: 0.0005803887652820168\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
     "import json\n",
     "\n",
     "# Lade die JSON-Datei\n",
@@ -549,6 +619,9 @@
     "# HTML-Ausgabe im Notebook\n",
     "from IPython.display import display, HTML\n",
     "display(HTML(f\"<div>{output}</div>\"))\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
     "\"\"\"\n",
     "\n",
     "# Beispiel-JSON-Inhalt als Dictionary\n",
@@ -625,7 +698,42 @@
     "    output += \"-\" * 50 + \"\\n\"\n",
     "\n",
     "# Ausgabe der formatierten Daten\n",
-    "print(output)\n"
+    "print(output)\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "Funktion: escape_time\n",
+    "  CPU Verbrauch (C-Code): 1.34%\n",
+    "  CPU Verbrauch (Python): 3.77%\n",
+    "  Durchschnittlicher Speicherverbrauch: 0.00 MB\n",
+    "  Core-Auslastung: 0.49%\n",
+    "  System-Auslastung: 0.11%\n",
+    "--------------------------------------------------\n",
+    "Funktion: mandelbrot_set_np_vectorized\n",
+    "  CPU Verbrauch (C-Code): 0.19%\n",
+    "  CPU Verbrauch (Python): 0.00%\n",
+    "  Durchschnittlicher Speicherverbrauch: 0.00 MB\n",
+    "  Core-Auslastung: 0.48%\n",
+    "  System-Auslastung: 0.01%\n",
+    "--------------------------------------------------\n",
+    "Funktion: mandelbrot_set_numba_vectorized\n",
+    "  CPU Verbrauch (C-Code): 0.28%\n",
+    "  CPU Verbrauch (Python): 0.00%\n",
+    "  Durchschnittlicher Speicherverbrauch: 0.00 MB\n",
+    "  Core-Auslastung: 0.50%\n",
+    "  System-Auslastung: 0.00%\n",
+    "--------------------------------------------------\n",
+    "Funktion: mandelbrot_set_numba_vectorized_par\n",
+    "  CPU Verbrauch (C-Code): 0.63%\n",
+    "  CPU Verbrauch (Python): 0.00%\n",
+    "  Durchschnittlicher Speicherverbrauch: 0.00 MB\n",
+    "  Core-Auslastung: 0.66%\n",
+    "  System-Auslastung: 0.00%\n",
+    "--------------------------------------------------\n",
+    "\n",
+    "\"\"\"\n"
    ]
   },
   {
