--- a/EA3/EA3_Mandelbrot-Set_Ahmed.ipynb
+++ b/EA3/EA3_Mandelbrot-Set_Ahmed.ipynb
@@ -429,6 +429,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Cell magic `%%scalene` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%scalene --cpu-only --cpu-sampling-rate 0.0001\n",
+    "\n",
+    "import numpy as np\n",
+    "import numba\n",
+    "\n",
+    "def escape_time(p, maxiter):\n",
+    "    z = 0j\n",
+    "    for i in range(maxiter):\n",
+    "        z = z*z + p\n",
+    "        if abs(z) > 2:\n",
+    "            return i\n",
+    "    return maxiter\n",
+    "\n",
+    "def mandelbrot_set_np_vectorized(P, maxiter):\n",
+    "    vectorized_escape_time = np.vectorize(escape_time)\n",
+    "    return vectorized_escape_time(P, maxiter)\n",
+    "\n",
+    "@numba.vectorize(['int32(complex128, int32)'])\n",
+    "def escape_time_numba(p, maxiter):\n",
+    "    z = 0j\n",
+    "    for i in range(maxiter):\n",
+    "        z = z*z + p\n",
+    "        if abs(z) > 2:\n",
+    "            return i\n",
+    "    return maxiter\n",
+    "\n",
+    "def mandelbrot_set_numba_vectorized(P, maxiter):\n",
+    "    return escape_time_numba(P, maxiter)\n",
+    "\n",
+    "@numba.vectorize(['int32(complex128, int32)'], target='parallel')\n",
+    "def escape_time_numba_par(p, maxiter):\n",
+    "    z = 0j\n",
+    "    for i in range(maxiter):\n",
+    "        z = z*z + p\n",
+    "        if abs(z) > 2:\n",
+    "            return i\n",
+    "    return maxiter\n",
+    "\n",
+    "def mandelbrot_set_numba_vectorized_par(P, maxiter):\n",
+    "    return escape_time_numba_par(P, maxiter)\n",
+    "\n",
+    "real_param = (-1.5, 1.1, 300)\n",
+    "imag_param = (-1.5j, 1.1j, 300)\n",
+    "XX, YY = np.meshgrid(np.linspace(*real_param), np.linspace(*imag_param))\n",
+    "P = XX + YY\n",
+    "maxiter = 200\n",
+    "\n",
+    "mandelbrot_set_np_vectorized(P, maxiter)\n",
+    "mandelbrot_set_numba_vectorized(P, maxiter)\n",
+    "mandelbrot_set_numba_vectorized_par(P, maxiter)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "deletable": true,
@@ -633,7 +699,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -647,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.9"
   },
   "otter": {
    "OK_FORMAT": true,
