--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -614,7 +614,7 @@
     "\n",
     "def mindest_mantissenbits(x, y):\n",
     "    # Berechnet die Anzahl der benötigten Mantissenbits für eine korrekte Berechnung\n",
-    "    # float128 um exaktere Praezision zu ermoeglichen\n",
+    "    # float128 um exaktere Präzision zu ermöglichen\n",
     "    return np.abs(np.log2(np.float128(x)) - np.log2(np.float128(y)))\n",
     "\n",
     "# Beispiel zur Darstellbarkeit float32\n",
@@ -625,7 +625,7 @@
     "# Ergebnis: (16777216.0, 16777216.0, 'darstellbar?:', True)\n",
     "\n",
     "# Beispiel zur Darstellbarkeit float32\n",
-    "# Dargestellte Zahl muss hier mit Mantisse von Mindestlaenge 24 dargestellt werden, nicht moeglich bei float32\n",
+    "# Dargestellte Zahl muss hier mit Mantisse von Mindestlänge 24 dargestellt werden, nicht möglich bei float32\n",
     "b = np.float128(2**24)\n",
     "x+b, np.float64(x+b), \"darstellbar?:\", mindest_mantissenbits(x,b) < 23 + 1\n",
     "# Ergebnis: (16777217.0, 16777216.0, 'darstellbar?:', False)\n",
@@ -940,9 +940,9 @@
     "    A = A.astype(np.float64)    # Sicherstellen, dass mit floats gerechnet wird\n",
     "    b = b.astype(np.float64)\n",
     "    \n",
-    "    P = lu_decomposition(A)    # Pivot-Vektor und A (welches LU-Zerlegung enthaelt) werden berechnet   \n",
-    "    y = l_solve(A, b[P])    # Ly = b[P] wird geloest fuer y     \n",
-    "    x = b_solve(A, y)    # Ux = y wird geloest fuer x    \n",
+    "    P = lu_decomposition(A)    # Pivot-Vektor und A (welches LU-Zerlegung enthält) werden berechnet   \n",
+    "    y = l_solve(A, b[P])    # Ly = b[P] wird gelöst für y     \n",
+    "    x = b_solve(A, y)    # Ux = y wird gelöst für x    \n",
     "    return x"
    ]
   },
@@ -986,9 +986,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test bestanden fuer Dimension 16 x 16\n",
-      "Test bestanden fuer Dimension 32 x 32\n",
-      "Test bestanden fuer Dimension 64 x 64\n"
+      "Test bestanden für Dimension 16 x 16\n",
+      "Test bestanden für Dimension 32 x 32\n",
+      "Test bestanden für Dimension 64 x 64\n"
      ]
     }
    ],
@@ -1002,9 +1002,9 @@
     "    linalg_x = linalg.solve(A, b)    \n",
     "    custom_x = custom_solve(A, b)\n",
     "\n",
-    "    #sicherstellen, dass Ergebnisse gleich sind, float-Unpraezision ignorieren\n",
+    "    #sicherstellen, dass Ergebnisse gleich sind, float-Unpräzision ignorieren\n",
     "    assert np.allclose(linalg_x, custom_x), f\"Ergebnisse weichen zu stark ab bei Dimension {n}\"    \n",
-    "    print(f\"Test bestanden fuer Dimension {n} x {n}\")\n",
+    "    print(f\"Test bestanden für Dimension {n} x {n}\")\n",
     "\n",
     "\n",
     "\n",
@@ -1246,7 +1246,7 @@
    "source": [
     "import memray, os\n",
     "\n",
-    "#alle .py files werden ausgefuehrt in python3 um .bin Dateien zu erstellen\n",
+    "#alle .py files werden ausgeführt in python3 um .bin Dateien zu erstellen\n",
     "for file_name in file_names:    \n",
     "    os.system(f\"python3 {file_name.replace(\".bin\", \".py\")}\")"
    ]
