--- a/EA3/EA3.ipynb
+++ b/EA3/EA3.ipynb
@@ -1258,9 +1258,9 @@
     "    A = A.astype(np.float64)    # Sicherstellen, dass mit floats gerechnet wird\n",
     "    b = b.astype(np.float64)\n",
     "    \n",
-    "    P = lu_decomposition(A)    # Pivot-Vektor und A (welches LU-Zerlegung enthaelt) werden berechnet   \n",
-    "    y = l_solve(A, b[P])    # Ly = b[P] wird geloest fuer y     \n",
-    "    x = b_solve(A, y)    # Ux = y wird geloest fuer x    \n",
+    "    P = lu_decomposition(A)    # Pivot-Vektor und A (welches LU-Zerlegung enthält) werden berechnet   \n",
+    "    y = l_solve(A, b[P])    # Ly = b[P] wird gelöst für y     \n",
+    "    x = b_solve(A, y)    # Ux = y wird gelöst für x    \n",
     "    return x"
    ]
   },
@@ -1313,9 +1313,9 @@
     "    A = A.astype(np.float64)    # Sicherstellen, dass mit floats gerechnet wird\n",
     "    b = b.astype(np.float64)\n",
     "    \n",
-    "    P = lu_decomposition_njit(A)    # Pivot-Vektor und A (welches LU-Zerlegung enthaelt) werden berechnet   \n",
-    "    y = l_solve_njit(A, b[P])    # Ly = b[P] wird geloest fuer y     \n",
-    "    x = b_solve_njit(A, y)    # Ux = y wird geloest fuer x    \n",
+    "    P = lu_decomposition_njit(A)    # Pivot-Vektor und A (welches LU-Zerlegung enthält) werden berechnet   \n",
+    "    y = l_solve_njit(A, b[P])    # Ly = b[P] wird gelöst für y     \n",
+    "    x = b_solve_njit(A, y)    # Ux = y wird gelöst für x    \n",
     "    return x\n",
     "\n",
     "@njit\n",
@@ -1324,9 +1324,9 @@
     "    A = A.astype(np.float64)    # Sicherstellen, dass mit floats gerechnet wird\n",
     "    b = b.astype(np.float64)\n",
     "    \n",
-    "    P = lu_decomposition_njit(A)    # Pivot-Vektor und A (welches LU-Zerlegung enthaelt) werden berechnet   \n",
-    "    y = l_solve_njit_par(A, b[P])    # Ly = b[P] wird geloest fuer y     \n",
-    "    x = b_solve_njit_par(A, y)    # Ux = y wird geloest fuer x    \n",
+    "    P = lu_decomposition_njit(A)    # Pivot-Vektor und A (welches LU-Zerlegung enthält) werden berechnet   \n",
+    "    y = l_solve_njit_par(A, b[P])    # Ly = b[P] wird gelöst für y     \n",
+    "    x = b_solve_njit_par(A, y)    # Ux = y wird gelöst für x    \n",
     "    return x\n",
     "\n",
     "@njit\n",
@@ -1335,9 +1335,9 @@
     "    A = A.astype(np.float64)    # Sicherstellen, dass mit floats gerechnet wird\n",
     "    b = b.astype(np.float64)\n",
     "    \n",
-    "    P = lu_decomposition_njit_par(A)    # Pivot-Vektor und A (welches LU-Zerlegung enthaelt) werden berechnet   \n",
-    "    y = l_solve_njit(A, b[P])    # Ly = b[P] wird geloest fuer y     \n",
-    "    x = b_solve_njit(A, y)    # Ux = y wird geloest fuer x    \n",
+    "    P = lu_decomposition_njit_par(A)    # Pivot-Vektor und A (welches LU-Zerlegung enthält) werden berechnet   \n",
+    "    y = l_solve_njit(A, b[P])    # Ly = b[P] wird gelöst für y     \n",
+    "    x = b_solve_njit(A, y)    # Ux = y wird gelöst für x    \n",
     "    return x"
    ]
   },
@@ -1424,7 +1424,7 @@
     "            if run > 0: # Durchlauf 0 compiliert und weicht von der Laufzeit stark ab \n",
     "                _run_times[n] += perf_counter_ns() - start_ns # Laufzeit wird in dict summiert    \n",
     "\n",
-    "        #sicherstellen, dass Ergebnisse gleich sind, float-Unpraezision ignorieren\n",
+    "        #sicherstellen, dass Ergebnisse gleich sind, float-Unpräzision ignorieren\n",
     "        assert np.allclose(linalg_x, custom_x), f\"Fehler bei Dimension {n} mit Funktion {custom_solve_variation.__name__}\"  \n",
     "        \n",
     "        print(f\"{custom_solve_variation.__name__:<18} {n:<10} {_run_times[n] / iterations / 1e6:.3f} ms\")\n",
