--- a/EA3/EA3_Mandelbrot-Set_Ahmed.ipynb
+++ b/EA3/EA3_Mandelbrot-Set_Ahmed.ipynb
@@ -429,6 +429,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scalene extension successfully loaded. Note: Scalene currently only\n",
+      "supports CPU+GPU profiling inside Jupyter notebooks. For full Scalene\n",
+      "profiling, use the command line version. To profile in line mode, use\n",
+      "`%scrun [options] statement`. To profile in cell mode, use `%%scalene\n",
+      "[options]` followed by your code.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext scalene"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -436,7 +457,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "UsageError: Cell magic `%%scalene` not found.\n"
+      "Scalene: An exception of type ImportError occurred. Arguments:\n",
+      "(\"cannot import name 'display' from 'IPython.core.display' (/opt/conda/lib/python3.12/site-packages/IPython/core/display.py)\",)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.12/site-packages/scalene/scalene_profiler.py\", line 2133, in run_profiler\n",
+      "    exit_status = profiler.profile_code(\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/conda/lib/python3.12/site-packages/scalene/scalene_profiler.py\", line 1868, in profile_code\n",
+      "    ScaleneJupyter.display_profile(\n",
+      "  File \"/opt/conda/lib/python3.12/site-packages/scalene/scalene_jupyter.py\", line 35, in display_profile\n",
+      "    from IPython.core.display import display\n",
+      "ImportError: cannot import name 'display' from 'IPython.core.display' (/opt/conda/lib/python3.12/site-packages/IPython/core/display.py)\n",
+      "\n"
      ]
     }
    ],
@@ -699,9 +731,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "SciPro Jupyter (Docker)",
    "language": "python",
-   "name": "python3"
+   "name": "scipro"
   },
   "language_info": {
    "codemirror_mode": {
