--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -558,7 +558,7 @@
     "> Die Differenz `e^x - 1` ist kleiner als die **Maschinengenauigkeit** `ε` (Epsilon).  \n",
     "> Deshalb wird `e^x - 1` vom Computer als **0.0** berechnet, da ein 64-Bit-Gleitkommawert (float64) **nicht mehr ausreichend genau** ist.\n",
     "\n",
-    "Es fällt auf, dass der Zähler ab `x = 1e-16` zu null wird, aber der Nenner von null verschieden bleibt, und daher ist das Gesamtergebnis gleich null.\n",
+    "Es fällt auf, dass der Zähler ab `x = 1e-16` zu Null wird, aber der Nenner von null verschieden bleibt, und daher ist das Gesamtergebnis gleich null.\n",
     "\n",
     "<h3> Lösung: Stabilere Berechnung mit NumPy </h3>\n",
     "\n",
