--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -405,7 +405,7 @@
     "\n",
     "In dieser Aufgabe soll die Funktion f(x) für x = 10<sup>-1</sup>, 10<sup>-2</sup>, ..., 10<sup>-15</sup> berechnet werden. Danach soll die Funktion für noch kleinere Werte von x, nämlich x = 10<sup>-16</sup>, 10<sup>-17</sup>, ..., 10<sup>-20</sup>, berechnet werden. \n",
     "\n",
-    "Der Grenzwert der Funktion für x → 0 ist 1. Dabei sollen mögliche numerische Probleme bei sehr kleinen x beobachtet werden. Ab `1e-08` zeigt sich die abnehmende numerische Stabilität deutlich dardurch, dass bei kleinerem x der Abstand des Funktionswertes zu 1.0 nicht mehr weiter abnimmt. "
+    "Der Grenzwert der Funktion für x → 0 ist 1. Dabei sollen mögliche numerische Probleme bei sehr kleinen x beobachtet werden. Ab `1e-08` zeigt sich die abnehmende numerische Stabilität deutlich dardurch, dass bei kleinerem x der Abstand des Funktionswertes zu `1.0` nicht mehr weiter abnimmt. "
    ]
   },
   {
