--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "080a3fb8-9b98-4017-b6ba-3895321b8431",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "11b6c189-e0ee-411a-8f83-b804db3527d8",
    "metadata": {
     "tags": []
@@ -547,7 +547,7 @@
     "\n",
     "| Phänomen                    | Beschreibung                                                                |\n",
     "|-----------------------------|------------------------------------------------------------------------------|\n",
-    "| Katastrophale Auslöschung   | Verlust signifikanter Ziffern durch Subtraktion ähnlicher Zahlen             |\n",
+    "| Katastrophale [Auslöschung](https://de.m.wikipedia.org/wiki/Ausl%C3%B6schung_(numerische_Mathematik))   | Verlust signifikanter Ziffern durch Subtraktion ähnlicher Zahlen             |\n",
     "| Numerische Instabilität     | Instabiles Verhalten bei kleinen Änderungen der Eingabe                      |\n",
     "| Rundungsfehlerakkumulation  | Anhäufung von Maschinenfehlern durch viele Rechenoperationen                 |\n",
     "| (Numerische) Divergenz      | Umgangssprachlich, wenn das Ergebnis sich vom Sollwert entfernt              |\n",
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9d1ee4b6",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d6c50211",
    "metadata": {},
    "outputs": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e905df91",
    "metadata": {},
    "outputs": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7e01d874-1715-40b2-918f-be10435918b5",
    "metadata": {
     "nbgrader": {
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ef6c6d07-df37-4011-b913-be1719ffb094",
    "metadata": {
     "nbgrader": {
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e5fb20a9-a354-4b3d-8890-8870d825d730",
    "metadata": {
     "nbgrader": {
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "3b6bc562-608a-4f7e-b2a3-2f63d0447f85",
    "metadata": {
     "nbgrader": {
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e1f13582-71a9-4c1a-81fc-d400598964a3",
    "metadata": {
     "tags": []
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "9589f383-a893-4d90-93ae-c2b1f44e5d36",
    "metadata": {
     "tags": []
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "19be799c",
    "metadata": {},
    "outputs": [
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "2656c877",
    "metadata": {},
    "outputs": [
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3a150e02",
    "metadata": {},
    "outputs": [
