--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -547,7 +547,8 @@
     "\n",
     "| Phänomen                    | Beschreibung                                                                |\n",
     "|-----------------------------|------------------------------------------------------------------------------|\n",
-    "| Katastrophale [Auslöschung](https://de.m.wikipedia.org/wiki/Ausl%C3%B6schung_%28numerische_Mathematik%29)
+    "| Katastrophale <a href="https://de.m.wikipedia.org/wiki/Ausl%C3%B6schung_(numerische_Mathematik)">Auslöschung</a>
+
    | Verlust signifikanter Ziffern durch Subtraktion ähnlicher Zahlen             |\n",
     "| Numerische Instabilität     | Instabiles Verhalten bei kleinen Änderungen der Eingabe                      |\n",
     "| Rundungsfehlerakkumulation  | Anhäufung von Maschinenfehlern durch viele Rechenoperationen                 |\n",
