--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -48,7 +48,7 @@
     "import numpy as np\n",
     "\n",
     "array = np.concatenate(([1], np.full(100, 1e-16)))\n",
-    "print(array)"
+    "print(array) "
    ]
   },
   {
@@ -547,7 +547,7 @@
     "\n",
     "| Phänomen                    | Beschreibung                                                                |\n",
     "|-----------------------------|------------------------------------------------------------------------------|\n",
-    "| Katastrophale [Auslöschung]( https://de.m.wikipedia.org/wiki/Ausl%C3%B6schung_(numerische_Mathematik) )   | Verlust signifikanter Ziffern durch Subtraktion ähnlicher Zahlen             |\n",
+    "| Katastrophale [Auslöschung]( https://de.m.wikipedia.org/wiki/Ausl%C3%B6schung_(numerische_Mathematik%29 )   | Verlust signifikanter Ziffern durch Subtraktion ähnlicher Zahlen             |\n",
     "| Numerische Instabilität     | Instabiles Verhalten bei kleinen Änderungen der Eingabe                      |\n",
     "| Rundungsfehlerakkumulation  | Anhäufung von Maschinenfehlern durch viele Rechenoperationen                 |\n",
     "| (Numerische) Divergenz      | Umgangssprachlich, wenn das Ergebnis sich vom Sollwert entfernt              |\n",
