--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -1127,7 +1127,7 @@
    "source": [
     "<span style=\"color: blue;\">\n",
     "Die Luafzeitenanalyse zeigt, dass lu_faktor leicht schneller ist als lu.\n",
-    "Jeh nach System können die Laufzeiten variieren.\n",
+    "Je nach System können die Laufzeiten variieren.\n",
     "</span>"
    ]
   },
