--- a/EA1/EA1_Abgabe.ipynb
+++ b/EA1/EA1_Abgabe.ipynb
@@ -1228,7 +1228,7 @@
    "metadata": {},
    "source": [
     "<div style=\"color: darkblue; background-color: #e0f7ff; padding: 5px; border-radius: 5px;\" title=\"Toni\">\n",
-    "memray muss installiert und importierbar sein, es wurde version 1.17.1 verwendet.\n",
+    "memray muss installiert und importierbar sein, es wurde version 1.16.0 gemäß Dockerfile aus dem Kurs verwendet.\n",
     "</div>"
    ]
   },
